# splitpost

./: DEEP.md  Dockerfile  Makefile  README.md  pyproject.toml  smoke_test.py
src/splitpost/: main.py
src/splitpost/api/: auth.py  health.py  posts.py
src/splitpost/core/: config.py  database.py  deps.py
src/splitpost/repositories/: post_repo.py  user_repo.py
src/splitpost/schemas/: post.py  user.py
src/splitpost/services/: adapt_service.py  auth_service.py  platform_rules.py
src/splitpost/static/: index.html
